# EXCAVATE-HT

./: .gitignore  AP GitHub readme.md  LICENSE  README.md  ap.py  environment.yml  gen_guide_lib_new.py  pyproject.toml
.github/workflows/: test.yml
docs/: Makefile  api_reference.rst  conf.py  contributing.rst  examples.rst  how_it_works.rst  index.rst  installation.rst  parameters.rst  requirements.txt
excavate/: ap.py  main.py  offtargets.py
excavate-ht/: ap.py  environment.yml  main.py
tests/: test_bowtie_hg38.py  test_bowtie_toy.py  test_core_functions.py
