[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excavate"
version = "0.1.0"
description = "A python package for allele-specific CRISPR gRNA library generation."
authors = [
    { name="Akshita Saxena", email="akshita.saxena0914@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "pandas",
    "biopython",
    "pyfaidx",
    "regex"
]

[project.scripts]
excavate = "excavate.main:main"

[tool.setuptools.packages.find]
where = ["excavate"]
