[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excavate-ht"
version = "0.1.0"
description = "A python package for allele-specific CRISPR gRNA library generation."
authors = [
    { name="Akshita Saxena", email="akshita.saxena0914@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "numpy",
    "pandas",
    "biopython",
    "pyfaidx",
    "regex"
]

[project.urls]
Homepage = "https://github.com/akshitasax/EXCAVATE-HT"
Documentation = "https://excavate-ht.readthedocs.io"
Source = "https://github.com/akshitasax/EXCAVATE-HT"
Issues = "https://github.com/akshitasax/EXCAVATE-HT/issues"

keywords = ["crispr", "genomics", "bioinformatics", "gRNA", "variant analysis", "high-throughput screening", "gRNA library", "dual-gRNA"]

[project.scripts]
excavate-ht = "excavate-ht.main:main"

[tool.setuptools.packages.find]
where = ["excavate-ht"]
